Panel1 margin removed to fix uneven spacing on some screen sizes

--- a/frontend/src/components/WorldMusic.module.css
+++ b/frontend/src/components/WorldMusic.module.css
@@ -8,7 +8,6 @@ a:link {
 .musicContainer {
     color: var(--colorWhiteFonts);   
     background: var(--gradientBG);
-    /* width: 100%; */
 }
 
 
@@ -124,6 +123,11 @@ a:link {
 
     .panelContainer {
         display: flex;
+        justify-content: space-evenly;
+    }
+
+    .panel1 {
+        margin: initial;
     }
 
     .panel2 {
